# NVIZ

./: .gitignore  CMakeLists.txt  README.md
Assets/Models/: imgui.ini
Assets/NIRS/: example.snirf  imgui.ini  raw_data.snirf  satori_processed.snirf  sub01_trial03_TRIM_BP_ZNORM_TDDR.snirf
Assets/Shaders/: Cortex.frag  Cortex.vert  FlatColor.frag  FlatColor.vert  Line.frag  Line.vert  Phong.frag  Phong.vert  Point.frag  Point.vert
Forms/: CameraControlWidget.ui
Include/Core/: Application.h  Assert.h  AssetManager.h  Base.h  Input.h  Log.h  ViewportWidget.h
Include/Events/: Commands.h  Event.h  EventBus.h
Include/NIRS/: NIRS.h  Processing.h  Snirf.h
Include/Renderer/: BufferLayout.h  Camera.h  CameraSettings.h  Framebuffer.h  IndexBuffer.h  LineRenderer.h  Mesh.h  OrbitCamera.h  PointRenderer.h  Renderer.h  RoamCamera.h  Shader.h  VertexArray.h  VertexBuffer.h  ViewportManager.h
Include/Utilities/: MeshGraph.h  Raycast.h  Transform.h  Vertex.h
Include/Widgets/: CameraSettingsWidget.h  ViewportWidget.h
Source/: main.cpp
Source/Core/: Application.cpp  AssetManager.cpp  Input.cpp  Log.cpp  ViewportWidget.cpp
Source/NIRS/: NIRS.cpp  Processing.cpp  Snirf.cpp
Source/Renderer/: Framebuffer.cpp  IndexBuffer.cpp  LineRenderer.cpp  Mesh.cpp  OrbitCamera.cpp  PointRenderer.cpp  Renderer.cpp  RoamCamera.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  ViewportManager.cpp
Source/Utilities/: MeshGraph.cpp
Source/Widgets/: CameraSettingsWidget.cpp  ViewportWidget.cpp
Utilities/py/: modify.py
